# SpecialTauola

./: README.md
TAUOLA/: config.status  configure.paths.csh  configure.paths.sh  make.inc
TAUOLA/TauSpinner/: Makefile  README  changelog.txt
TAUOLA/TauSpinner/examples/: Makefile  README  SETUP.C  config.status  configure  configure.in  distr.f  ggHXtautau.f  make.inc  make.inc.in  mc-tester.root  table1-1.txt  table2-2.txt  tau-reweight-CLEO-to-RCHL.cxx  tau-reweight-test.cxx
TAUOLA/TauSpinner/examples/CP-tests/: #3ProngWizardry.cxx#  #CP-test.cxx#  #Eva1Prong.cxx#  #Makefile#  #PionPionTauvert.tex#  #andytest.dat#  3ProngWizardry.cxx  3ProngWizardry.cxx~  CP-test.cxx  CP-test.cxx~  Eva1Prong.cxx  Eva1Prong.cxx~  EvaActual1Prong.cxx  EvaActual1Prong.cxx~  Generate.h  HEPEVTEvent.H  HEPEVTParticle.H  HEPEvent.H  HEPParticle.H  HepMCEvent.H  HepMCParticle.H  HerwigEvent.H  HerwigParticle.H  LUJETSEvent.H  LUJETSParticle.H  MC3Vector.H  MC4Vector.H  Makefile  Makefile~  PYJETSEvent.H  PYJETSParticle.H  PionPionTauvert.tex  README  README-lcg  Setup.H  decay4_psuedoscalar_tauneutrinos.root  decay4_scalar_tauneutrinos.root  mc-tester.root  real_decay4_psuedoscalar_tauneutrinos.root  real_decay4_scalar_tauneutrinos.root  (+1 more)
TAUOLA/TauSpinner/examples/CP-tests/H-pi/: CPbenchPiUserTreeAnalysis.C  SETUP.C  pseudoscalar.root  scalar.root
TAUOLA/TauSpinner/examples/CP-tests/H-rho/: SETUP.C  psedoscalar.root  scalar-tauframe.root  scalar.root  thet-0.2-tauframe.root  thet-0.2.root
TAUOLA/TauSpinner/examples/CP-tests/Z-pi/: CPbenchPiUserTreeAnalysisA.C  RijS-INTcosthe.root  Rijcostheta-S=2-6.root  SETUP.C  delta12.root  start-noc.root  start.root  start60-noc.root  start60.root  transverse-noc.root  transverse.root  transverse60-noc.root  transverse60.root
TAUOLA/TauSpinner/examples/CP-tests/Z-rho/: CPtestUserTreeAnalysis.C  SETUP.C  table1-1.txt  table2-2.txt
TAUOLA/TauSpinner/examples/CP-tests/generate-datafiles/: generate.cxx  pythia.H.conf  pythia.Z.conf
TAUOLA/TauSpinner/examples/TauReweighter/: 3ProngWizardry.cxx  EvaActual1Prong.cxx  Makefile  make.inc
TAUOLA/TauSpinner/examples/applications/: CorrectEvent.h  Makefile  README  applications-comparison.conf  applications-comparison.cxx  applications-plots.conf  applications-plots.cxx  hepmc-tauola-redecay.cxx
TAUOLA/TauSpinner/examples/applications/applications-fits/: README  applications-fits.conf  applications-fits.cxx  common.cxx  common.h
TAUOLA/TauSpinner/examples/applications/applications-plots-and-paper/: Makefile  Phi_mass.eps  Tauola_interface_design.bib  W_mass.eps  Wa1pion_note.eps  Z0a1pion_note.eps  Z0electronQED_note.eps  Z0muonQED_note.eps  Z_mass.eps  appendixA.tex  appendixB.tex  bornAFB-test.OK.eps  fit-config-file.txt  h1_020.eps  h1_021.eps  h1_120.eps  h1_121.eps  h1_220.eps  h1_221.eps  h2_000.eps  h2_000_projectionX.eps  h2_000_projectionX_note.eps  h2_000_projectionY.eps  h2_000_vis_mass.eps  h2_001.eps  h2_002.eps  h2_100.eps  h2_100_projectionX.eps  h2_100_projectionY.eps  h2_100_vis_mass.eps  h2_101.eps  h2_102.eps  h2_200.eps  h2_200_projectionX.eps  h2_200_projectionY.eps  h2_200_vis_mass.eps  h2_201.eps  h2_202.eps  h2_300.eps  h2_300_note.eps  (+103 more)
TAUOLA/TauSpinner/examples/applications/applications-rootfiles/: Makefile  PlotFig1.C  PlotFig2.C  PlotFig3.C  PlotFig4.C  PlotFig5.C  PlotStyle.C  PlotUtils.C  README  out.H.root  out.W.a1.root  out.W.root  out.Z.a1.root  out.Z.root  out.lepton.root  out.test.bornAFB.root
TAUOLA/TauSpinner/examples/applications/applications-rootfiles/backup-all-off/: Wa1pion_note.eps  Z0a1pion.eps  Z0a1pion_note.eps  Z0electronQED.eps  Z0electronQED_note.eps  Z0muonQED.eps  Z0muonQED_note.eps  h2_000_projectionX_note.eps  h2_300_note.eps  h2_300_projectionX_note.eps  h2_300_vis_mass_note.eps  h2_800_projectionX_note.eps  h3_300_note.eps  h3_300_vis_mass_note.eps  input-file-info.txt  out.H.root  out.W.a1.root  out.W.root  out.Z.a1.root  out.Z.root  out.lepton.root  quarkdown.eps  quarkup.eps
TAUOLA/TauSpinner/examples/applications/applications-rootfiles/backup-no-FSR/: input-file-info.txt  out.H.root  out.W.a1.root  out.W.root  out.Z.a1.root  out.Z.root  out.lepton.root
TAUOLA/TauSpinner/examples/applications/test-bornAFB/: Makefile  README  bornAFB-test-CosthetaSpread.BAD_PDF.eps  bornAFB-test-CosthetaSpread.OK.eps  bornAFB-test.BAD_PDF.eps  bornAFB-test.BAD_PDF.out  bornAFB-test.OK.out  bornAFB-test.cxx
TAUOLA/TauSpinner/examples/applications/test-ipol/: Makefile  README  test-ipol-runall.sh  test-ipol.C  test-ipol.cxx
TAUOLA/TauSpinner/examples/applications/test-ipol/test-ipol-plots/: Makefile  test-ipol.tex
TAUOLA/TauSpinner/html/: index.html  style.css
TAUOLA/TauSpinner/paper-CP/: CP-spiner.tex  Makefile  Tauola_interface_design.bib  Zelta2.eps  coplanarity-angle-C-tau.eps  coplanarity-angle-C.eps  coplanarity-angle-D-tau.eps  coplanarity-angle-D.eps  elta.eps  elta2-noc.eps  elta2.eps
TAUOLA/TauSpinner/paper-application-studies/: README
TAUOLA/TauSpinner/paper-spin2/: Makefile  Spinner-extra-references.bbl  Spinner2.tex  Xtautau_0LR_8TeV_cstarp_cuts.eps  Xtautau_0LR_8TeV_cstarp_cutt.eps  Ztautau_8TeV_cstar_cstarp_cutt.eps  Ztautau_8TeV_cstar_cstarp_nocuts.eps  Ztautau_8TeV_cstarp_cuts_cutsa_cutsb.eps  Ztautau_8TeV_cstarp_cuts_cutslo_cutshi.eps  costheta.eps  costheta_2.eps  costheta_2_cuts.eps  costheta_cuts.eps  costheta_cuts_2.eps  costheta_down_s=125.eps  costheta_up_s=125.eps  hall_cstarp.eps  (+10 more)
TAUOLA/TauSpinner/paper-spin2-higgs/: Makefile  Spin2-higgs.tex  Tauola_interface_design.bib
TAUOLA/lib/: libTauolaCxxInterface.so.1.0.0  libTauolaFortran.so.1.0.0  libTauolaTauSpinner.so.1.1.0
TAUOLA/platform/: make.inc
TAUOLA/platform/LCGCONFIG/TauSpinner/: Makefile.am
TAUOLA/platform/LCGCONFIG/TauSpinner/examples/: Makefile.am
TAUOLA/platform/LCGCONFIG/TauSpinner/examples/CP-tests/: Makefile.am
TAUOLA/platform/LCGCONFIG/TauSpinner/examples/tauspinner-validation/: Makefile.am
TAUOLA/platform/LCGCONFIG/examples/: Makefile.am
TAUOLA/platform/LCGCONFIG/src/: Makefile.am
TAUOLA/platform/LCGCONFIG/tauola-fortran/: Makefile.am
(+162 files in other folders)
