lib_LTLIBRARIES = libTauolaFortran.la

#libTauolaFortran_la_SOURCES = \
#tauola/curr_cleo.f \
#tauola/formf.f \
#tauola/tauola.f \
#tauola/f3pi.f \
#tauola/pkorb.f

libTauolaFortran_la_SOURCES = \
tauola-modified/curr_cleo.f \
tauola-modified/formf.f \
tauola-modified/tauola.f \
tauola-modified/f3pi.f \
tauola-modified/pkorb.f \
tauola-modified/new-currents/other-currents/frho_pi_belle.f \
tauola-modified/new-currents/RChL-currents/rcht_3pi/f3pi_rcht.f \
tauola-modified/new-currents/RChL-currents/rcht_3pi/funct_3pi.f \
tauola-modified/new-currents/RChL-currents/rcht_common/FA1RCHL.f \
tauola-modified/new-currents/RChL-currents/rcht_common/ffwid3pi.f \
tauola-modified/new-currents/RChL-currents/rcht_common/funct_rpt.f \
tauola-modified/new-currents/RChL-currents/rcht_common/gaus_integr.f \
tauola-modified/new-currents/RChL-currents/rcht_common/gfact.f \
tauola-modified/new-currents/RChL-currents/rcht_common/initA1Tab.f \
tauola-modified/new-currents/RChL-currents/rcht_common/initA1TabKKpi.f \
tauola-modified/new-currents/RChL-currents/rcht_common/value_parameter.f \
tauola-modified/new-currents/RChL-currents/rcht_common/wid_a1_fit.f \
tauola-modified/new-currents/RChL-currents/rcht_common/wid_a1_fitKKpi.f

libTauolaFortran_la_FFLAGS = -fno-automatic -fno-backslash -ffixed-line-length-132
